[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aldi"
version = "0.1.1"
description = "Align and distill: Unifying and improving domain adaptive object detection"
readme = "README.md"
authors = [
  { name="justinkay", email="justinkay92@gmail.com" },
  { name="timmh", email="timm@haucke.xyz" }
]
dependencies = [
    "pillow==9.5.0", # see: https://github.com/facebookresearch/detectron2/issues/5010
    "scipy",
    "opencv-python",
    "detectron2 @ git+https://github.com/justinkay/detectron2_v07ish.git"
]

[project.urls]
Homepage = "https://github.com/justinkay/aldi"
Issues = "https://github.com/justinkay/aldi/issues"

[tool.setuptools.packages.find]
include = ["aldi", "aldi.*"]